objects/Reference_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer References</relationshipLabel>
        <relationshipName>R00N80000002TyZvEAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Information_URL__c</fullName>
        <description>URL to more info</description>
        <label>Additional Information URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Populated from the Account</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <description>Date Technology Deployed</description>
        <label>Expected Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Displaced_Competitor__c</fullName>
        <description>Displaced Competitor</description>
        <label>Displaced Competitor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--All--</fullName>
                </value>
                <value>
                    <fullName>3Com</fullName>
                </value>
                <value>
                    <fullName>Aastra</fullName>
                </value>
                <value>
                    <fullName>Adobe</fullName>
                </value>
                <value>
                    <fullName>Adtran</fullName>
                </value>
                <value>
                    <fullName>Adva</fullName>
                </value>
                <value>
                    <fullName>Agere</fullName>
                </value>
                <value>
                    <fullName>Alaxala Networks</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Allied Telesis</fullName>
                </value>
                <value>
                    <fullName>Anshi</fullName>
                </value>
                <value>
                    <fullName>Apresia</fullName>
                </value>
                <value>
                    <fullName>Arris</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Atrica</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>BelAir Networks</fullName>
                </value>
                <value>
                    <fullName>BinTec Communications</fullName>
                </value>
                <value>
                    <fullName>Bluecoat</fullName>
                </value>
                <value>
                    <fullName>Boda</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
                <value>
                    <fullName>Carrier Access</fullName>
                </value>
                <value>
                    <fullName>Checkpoint</fullName>
                </value>
                <value>
                    <fullName>Ciena</fullName>
                </value>
                <value>
                    <fullName>Citrix</fullName>
                </value>
                <value>
                    <fullName>Colubris</fullName>
                </value>
                <value>
                    <fullName>Corrigent</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Digital China</fullName>
                </value>
                <value>
                    <fullName>D-Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Franchise_Win__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Franchise Win</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Comes from the Account</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Education- Public/Private</fullName>
                </value>
                <value>
                    <fullName>Energy/Utilities</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Hospitality/Hotels &amp; Leisure</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media/Entertainment</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Technical Services</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Wholesale/Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <description>Number of Employees</description>
        <label>No. of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--All--</fullName>
                </value>
                <value>
                    <fullName>1-19</fullName>
                </value>
                <value>
                    <fullName>20-49</fullName>
                </value>
                <value>
                    <fullName>50-99</fullName>
                </value>
                <value>
                    <fullName>100-149</fullName>
                </value>
                <value>
                    <fullName>150-249</fullName>
                </value>
                <value>
                    <fullName>250-499</fullName>
                </value>
                <value>
                    <fullName>500-749</fullName>
                </value>
                <value>
                    <fullName>750-999</fullName>
                </value>
                <value>
                    <fullName>1000-1499</fullName>
                </value>
                <value>
                    <fullName>1500-4999</fullName>
                </value>
                <value>
                    <fullName>5000-9999</fullName>
                </value>
                <value>
                    <fullName>10000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Sites_Deployed__c</fullName>
        <description>Number of Sites Deployed</description>
        <label>No. of Sites Deployed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Sites__c</fullName>
        <formula>Account__r.No_of_Sites__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <description>Partner Name</description>
        <label>Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Flags__c</fullName>
        <label>Reference Flags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Franchise Win</fullName>
                </value>
                <value>
                    <fullName>Economic Stimulus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Score__c</fullName>
        <description>Reference Score</description>
        <label>Reference Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Star = Bought</fullName>
                    <default>true</default>
                    <label>1-Star = Bought</label>
                </value>
                <value>
                    <fullName>2-Stars = Bought, Deployed, Internal Reference Only</fullName>
                </value>
                <value>
                    <fullName>3-Stars = Bought, Deployed, External Reference</fullName>
                </value>
                <value>
                    <fullName>4-Stars = Premier Reference Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Details__c</fullName>
        <label>Technology/Service Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Technology__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CIFS (File Share / Backup / Replication)</fullName>
                </value>
                <value>
                    <fullName>Citrix</fullName>
                </value>
                <value>
                    <fullName>CRM Integration</fullName>
                </value>
                <value>
                    <fullName>CRM package</fullName>
                </value>
                <value>
                    <fullName>CTIOS</fullName>
                </value>
                <value>
                    <fullName>CUIS</fullName>
                </value>
                <value>
                    <fullName>Custom Reporting</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Expert Advisor</fullName>
                </value>
                <value>
                    <fullName>Hosted</fullName>
                </value>
                <value>
                    <fullName>ICM</fullName>
                </value>
                <value>
                    <fullName>ICM Hosted</fullName>
                </value>
                <value>
                    <fullName>IPIVR</fullName>
                </value>
                <value>
                    <fullName>Lotus Notes</fullName>
                </value>
                <value>
                    <fullName>Microsoft Exchange</fullName>
                </value>
                <value>
                    <fullName>Microsoft SharePoint</fullName>
                </value>
                <value>
                    <fullName>Migration from Express</fullName>
                </value>
                <value>
                    <fullName>Moblie Agent</fullName>
                </value>
                <value>
                    <fullName>MS-SQL (dB apps)</fullName>
                </value>
                <value>
                    <fullName>NFS (UNIX file sharing)</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Parent/Child</fullName>
                </value>
                <value>
                    <fullName>Partner/AS</fullName>
                </value>
                <value>
                    <fullName>Peoplesoft</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Presence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Multi__c</fullName>
        <label>Technology/Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AS-DC-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-DC-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-DC-PDI</fullName>
                </value>
                <value>
                    <fullName>AS-Optical-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-Optical-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-Optical-PDI</fullName>
                </value>
                <value>
                    <fullName>AS-R/S-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-R/S-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-R/S-PDI</fullName>
                </value>
                <value>
                    <fullName>AS-Security-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-Security-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-Security-PDI</fullName>
                </value>
                <value>
                    <fullName>AS-UC-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-UC-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-UC-PDI</fullName>
                </value>
                <value>
                    <fullName>AS-Wireless-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-Wireless-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-Wireless-PDI</fullName>
                </value>
                <value>
                    <fullName>DC-All</fullName>
                </value>
                <value>
                    <fullName>DC-ANS</fullName>
                </value>
                <value>
                    <fullName>DC-ANS-DCAS</fullName>
                </value>
                <value>
                    <fullName>DC-ANS -WAAS</fullName>
                </value>
                <value>
                    <fullName>DC-Nexus 1000</fullName>
                </value>
                <value>
                    <fullName>DC-Nexus 2000/5000</fullName>
                </value>
                <value>
                    <fullName>DC-Nexus 7000</fullName>
                </value>
                <value>
                    <fullName>DC-Storage</fullName>
                </value>
                <value>
                    <fullName>DC-Unified Computing</fullName>
                </value>
                <value>
                    <fullName>DMS</fullName>
                </value>
                <value>
                    <fullName>Ironport</fullName>
                </value>
                <value>
                    <fullName>Network Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Technology</description>
        <label>Technology/Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>--All--</fullName>
                </value>
                <value>
                    <fullName>AS-DC-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-DC-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-DC-PDI</fullName>
                </value>
                <value>
                    <fullName>AS-Optical-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-Optical-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-Optical-PDI</fullName>
                </value>
                <value>
                    <fullName>AS-R/S-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-R/S-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-R/S-PDI</fullName>
                </value>
                <value>
                    <fullName>AS-Security-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-Security-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-Security-PDI</fullName>
                </value>
                <value>
                    <fullName>AS-UC-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-UC-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-UC-PDI</fullName>
                </value>
                <value>
                    <fullName>AS-Wireless-Consultation</fullName>
                </value>
                <value>
                    <fullName>AS-Wireless-Optimization</fullName>
                </value>
                <value>
                    <fullName>AS-Wireless-PDI</fullName>
                </value>
                <value>
                    <fullName>DC-All</fullName>
                </value>
                <value>
                    <fullName>DC-ANS-DCAS</fullName>
                </value>
                <value>
                    <fullName>DC-ANS -WAAS</fullName>
                </value>
                <value>
                    <fullName>DC-Nexus 1000</fullName>
                </value>
                <value>
                    <fullName>DC-Nexus 2000/5000</fullName>
                </value>
                <value>
                    <fullName>DC-Nexus 7000</fullName>
                </value>
                <value>
                    <fullName>DC-Storage</fullName>
                </value>
                <value>
                    <fullName>DC-Unified Computing</fullName>
                </value>
                <value>
                    <fullName>DMS</fullName>
                </value>
                <value>
                    <fullName>Ironport</fullName>
                </value>
                <value>
                    <fullName>Network Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Used for the AT customer reference db.  The object is attached to Accounts.  Used by specific US/Canada AMs and US/Canada AT profile</description>
    <label>zzCustomer Reference</label>
    <nameField>
        <label>Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>